Actualización enfermedad.html

--- a/src/pages/enfermedad.html
+++ b/src/pages/enfermedad.html
@@ -88,6 +88,27 @@
     </div>
   </div>
 
+
+</div>
+</div>
+
+<!-- AÑADE ESTO AQUÍ -->
+<div id="modalVisualizarEnfermedad" class="modal">
+  <div class="modal-contenido">
+    <h2>Información de la Enfermedad</h2>
+    <div id="contenidoEnfermedad"></div>
+    <div class="botones">
+      <button id="btnCerrarVisualizar">Cerrar</button>
+    </div>
+  </div>
+</div>
+<!-- HASTA AQUÍ -->
+
+<script src="../js/enfermedad.js"></script>
+<script src="../js/navegacion.js"></script>
+<script src="../js/i18n.js"></script>
+
+
   <script src="../js/enfermedad.js"></script>
   <script src="../js/navegacion.js"></script>
   <script src="../js/i18n.js"></script>
