--- a/src/pages/medicamento.html
+++ b/src/pages/medicamento.html
@@ -77,6 +77,21 @@
     </div>
   </div>
 
+
+
+  <!-- Modal para visualizar medicamento -->
+<div id="modalVisualizarMedicamento" class="modal">
+  <div class="modal-contenido">
+    <h2>Información del Medicamento</h2>
+    <div id="contenidoMedicamento"></div>
+
+    <div class="botones">
+      <button id="btnCerrarVisualizar">Cerrar</button>
+    </div>
+  </div>
+</div>
+
+
   <script src="../js/medicamento.js"></script>
   <script src="../js/navegacion.js"></script>
   <script src="../js/i18n.js"></script>
