--- a/src/pages/animales.html
+++ b/src/pages/animales.html
@@ -46,14 +46,17 @@
   </div>
 
   <div id="modalVisualizarAnimal" class="modal">
-    <div class="modal-contenido" style="width: 400px;">
+    <div class="modal-contenido visualizar">
       <h2>Detalles del Animal</h2>
-      <div id="contenidoAnimal"></div>
+  
+      <div id="contenidoAnimal" class="detalle-contenido"></div>
+  
       <div class="botones">
         <button id="btnCerrarVisualizar">Cerrar</button>
       </div>
     </div>
   </div>
+  
 
   <div id="modalAgregarAnimal" class="modal">
     <div class="modal-contenido">
@@ -91,6 +94,41 @@
       </div>
     </div>
   </div>
+  
+  <!-- Modal para actualizar peso -->
+<div id="modalActualizarPeso" class="modal">
+<div class="modal-contenido">
+<h2>Actualizar Peso del Animal</h2>
+<p id="nombreAnimalPeso" style="margin-bottom: 15px; font-weight: bold; color: #2c5f2d;"></p>
+
+<label>Nuevo Peso (kg):</label>
+<input type="number" id="nuevoPeso" step="0.1" placeholder="Ej: 450.5">
+
+<label>Fecha:</label>
+<input type="date" id="fechaPeso">
+
+<label>Condición Corporal:</label>
+<select id="condicionCorporal">
+<option value="1">1 - Muy delgado</option>
+<option value="2">2 - Delgado</option>
+<option value="3">3 - Ideal</option>
+<option value="4">4 - Sobrepeso</option>
+<option value="5">5 - Obeso</option>
+</select>
+
+<label>Usuario que Registra:</label>
+<input type="text" id="usuarioRegistro" placeholder="Nombre del usuario">
+
+<label>Observaciones:</label>
+<textarea id="observacionesPeso" rows="3" placeholder="Observaciones sobre el peso del animal..."></textarea>
+
+<div class="botones">
+<button id="btnGuardarPeso">Guardar</button>
+<button id="btnCerrarModalPeso">Cancelar</button>
+</div>
+</div>
+</div>
+
 
   <script src="../js/animales.js"></script>
   <script src="../js/navegacion.js"></script>
