--- a/src/pages/enfermedad.html
+++ b/src/pages/enfermedad.html
@@ -1,121 +1,120 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <link rel="icon" type="image/png" href="../img/logo.png">
-
-  <title>Enfermedades - Agrosystem</title>
-  <link rel="stylesheet" href="../css/enfermedad.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="icon" type="image/png" href="../img/logo.png">
+<title>Enfermedades - Agrosystem</title>
+<link rel="stylesheet" href="../css/enfermedad.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
-  <header class="header">
-    <div class="logo">
-      <img src="../img/logo.png" alt="Logo Agrosystem">
-      <span class="nombre">AGROSYSTEM</span>
-    </div>
-    <div class="header-buttons">
-      <button onclick="irHome()" class="btn-volver">
-        <i class="fas fa-arrow-left"></i> Volver al inicio 
-      </button>
-    </div>
-  </header>
-
-  <div class="contenedor-principal">
-    <aside class="sidebar">
-      <button class="menu-btn"><i class="fas fa-cow"></i> Animal</button>
-      <button class="menu-btn"><i class="fas fa-pills"></i> Medicamento</button>
-      <button class="menu-btn"><i class="fas fa-file-alt"></i> Tarjeta de salud</button>
-      <button class="menu-btn"><i class="fas fa-notes-medical"></i> Reporte médico</button>
-      <button class="menu-btn"><i class="fas fa-syringe"></i> Tratamiento</button>
-      <button class="menu-btn activo"><i class="fas fa-shield-virus"></i> Enfermedad</button>
-    </aside>
-
-    <main class="contenido">
-      <div class="buscador-agregar">
-        <div class="buscador">
-          <input type="text" placeholder="Buscar">
-          <button>🔍</button>
-        </div>
-        <button class="btn-agregar">Agregar Enfermedad ➕</button>
-      </div>
-
-      <div class="tabla-animales"></div>
-    </main>
-  </div>
-
-  <div id="modalAgregarEnfermedad" class="modal">
-    <div class="modal-contenido">
-      <h2>Agregar Enfermedad</h2>
-
-      <label>Nombre:</label>
-      <input type="text" id="nombre">
-
-      <label>Tipo:</label>
-      <input type="text" id="tipo">
-
-      <label>Síntomas:</label>
-      <input type="text" id="sintomas">
-
-      <label>Duración Estimada:</label>
-      <input type="text" id="duracion">
-
-      <label>Tratamientos Recomendados:</label>
-      <input type="text" id="tratamientos">
-
-      <label>Nivel de Riesgo:</label>
-      <select id="riesgo">
-        <option value="Leve">Leve</option>
-        <option value="Moderado">Moderado</option>
-        <option value="Grave">Grave</option>
-        <option value="Crítico">Crítico</option>
-      </select>
-
-      <label>Modo de Transmisión:</label>
-      <input type="text" id="transmision">
-
-      <label>Análisis:</label>
-      <input type="text" id="analisis">
-
-      <label>Observaciones:</label>
-      <textarea id="observaciones" rows="3"></textarea>
-
-      <div class="botones">
-        <button id="btnGuardarEnfermedad">Guardar</button>
-        <button id="btnCerrarModal">Cancelar</button>
-      </div>
-    </div>
-  </div>
-
-
+<header class="header">
+<div class="logo">
+<img src="../img/logo.png" alt="Logo Agrosystem">
+<span class="nombre">AGROSYSTEM</span>
 </div>
+<div class="header-buttons">
+<button onclick="irHome()" class="btn-volver">
+<i class="fas fa-arrow-left"></i> Volver al inicio 
+</button>
+</div>
+</header>
+
+<div class="contenedor-principal">
+<aside class="sidebar">
+<button class="menu-btn"><i class="fas fa-cow"></i> Animal</button>
+<button class="menu-btn"><i class="fas fa-pills"></i> Medicamento</button>
+<button class="menu-btn"><i class="fas fa-file-alt"></i> Tarjeta de salud</button>
+<button class="menu-btn"><i class="fas fa-notes-medical"></i> Reporte médico</button>
+<button class="menu-btn"><i class="fas fa-syringe"></i> Tratamiento</button>
+<button class="menu-btn activo"><i class="fas fa-shield-virus"></i> Enfermedad</button>
+</aside>
+
+<main class="contenido">
+<div class="buscador-agregar">
+<div class="buscador">
+<input type="text" placeholder="Buscar">
+<button>🔍</button>
+</div>
+<button class="btn-agregar">Agregar Enfermedad ➕</button>
+</div>
+<div class="tabla-animales"></div>
+</main>
 </div>
 
-<!-- AÑADE ESTO AQUÍ -->
+<!-- Modal Agregar/Editar Enfermedad -->
+<div id="modalAgregarEnfermedad" class="modal">
+<div class="modal-contenido">
+<h2>Agregar Enfermedad</h2>
+<label>Nombre:</label>
+<input type="text" id="nombre">
+
+<label>Tipo:</label>
+<input type="text" id="tipo">
+
+<label>Síntomas:</label>
+<input type="text" id="sintomas">
+
+<label>Duración Estimada:</label>
+<input type="text" id="duracion">
+
+<label>Tratamientos Recomendados:</label>
+<input type="text" id="tratamientos">
+
+<label>Nivel de Riesgo:</label>
+<select id="riesgo">
+<option value="Leve">Leve</option>
+<option value="Moderado">Moderado</option>
+<option value="Grave">Grave</option>
+<option value="Crítico">Crítico</option>
+</select>
+
+<label>Modo de Transmisión:</label>
+<input type="text" id="transmision">
+
+<label>Análisis:</label>
+<input type="text" id="analisis">
+
+<label>Tipo de Análisis:</label>
+<select id="tipoAnalisis">
+  <option value="">Seleccione</option>
+  <option value="Laboratorio">Laboratorio</option>
+  <option value="Sanguíneo">Sanguíneo</option>
+  <option value="Microbiológico">Microbiológico</option>
+  <option value="Clínico">Clínico</option>
+</select>
+
+<label>Resultado:</label>
+<input type="text" id="resultado">
+
+<label>Interpretación:</label>
+<textarea id="interpretacion" rows="3"></textarea>
+
+
+<label>Observaciones:</label>
+<textarea id="observaciones" rows="3"></textarea>
+
+<div class="botones">
+<button id="btnGuardarEnfermedad">Guardar</button>
+<button id="btnCerrarModal">Cancelar</button>
+</div>
+</div>
+</div>
+
+<!-- Modal Visualizar Enfermedad -->
 <div id="modalVisualizarEnfermedad" class="modal">
-  <div class="modal-contenido">
-    <h2>Información de la Enfermedad</h2>
-    <div id="contenidoEnfermedad"></div>
-    <div class="botones">
-      <button id="btnCerrarVisualizar">Cerrar</button>
-    </div>
-  </div>
+<div class="modal-contenido">
+<h2>Información de la Enfermedad</h2>
+<div id="contenidoEnfermedad"></div>
+<div class="botones">
+<button id="btnCerrarVisualizar">Cerrar</button>
 </div>
-<!-- HASTA AQUÍ -->
+</div>
+</div>
 
 <script src="../js/enfermedad.js"></script>
 <script src="../js/navegacion.js"></script>
 <script src="../js/i18n.js"></script>
-
-
-  <script src="../js/enfermedad.js"></script>
-  <script src="../js/navegacion.js"></script>
-  <script src="../js/i18n.js"></script>
- 
-<script>
- 
-</script>
-
 </body>
 </html>
