Descripción de lo que hiciste

--- a/src/pages/medicamento.html
+++ b/src/pages/medicamento.html
@@ -67,6 +67,12 @@
       <label>Composición:</label>
       <input type="text" id="composicion">
 
+       <label>Solucion:</label>
+      <input type="text" id="Solucion">
+
+       <label>Frecuencia de aplicacion:</label>
+      <input type="text" id="Frecuencia de aplicacion">
+
       <label>Indicaciones:</label>
       <input type="text" id="indicaciones">
 
